# teluka

./: .dockerignore  .gitignore  .sesskey  CLAUDE.md  Dockerfile  gunicorn.conf.py  main.py  pyproject.toml  worker.py
components/: ui.py
components/pages/: dashboard.py  deal_detail.py  landing.py  login.py  new_deal.py  profile.py
core/: escrow.py  exceptions.py  forensics.py  tiers.py  verification.py
lib/: activity.py  cache.py  config.py  email_sender.py  jobs.py  middleware.py  otp_store.py  paymongo_client.py  phone.py  pin.py  push.py  session.py  sms.py  storage.py  supabase_client.py
migrations/: 001_indexes.sql  001_otp_requests.sql  002_users.sql  003_transactions.sql  004_auth_hardening.sql  005_add_email_to_users.sql  006_add_pin_to_users.sql  007_transaction_events.sql  008_missing_columns.sql  009_profile_photos.sql  010_push_subscriptions.sql  011_location_on_events.sql  012_auth_hardening2.sql
schemas/: transaction.py  user.py
scripts/: gen_vapid_keys.py
static/: manifest.json  sw.js
static/css/: app.css  dashboard.css  deal.css  landing.css
static/js/: app.js
